# data-structures

./: .gitignore  CMakeLists.txt  README.md  README_CLARIFICATIONS_AC.md  _config.yml  build.py  build.sh  index.html  test_geometry  test_geometry_cpp
Trie_of_blooming_directed_graphs_with_agents_and_filters/bash/: root.sh
Trie_of_blooming_directed_graphs_with_agents_and_filters/csharp/: Root.cs
Trie_of_blooming_directed_graphs_with_agents_and_filters/git/: root.sh
_data/: authors.yml  licenses.yml
_includes/: article-header.html
_posts/: 2026-01-15-rsa-encryption-fundamentals.md  2026-01-18-software-testing-strategies.md
_sass/: custom.scss
blooming_directed_graph_agents/: README.md
docs/: 752_Zed_Field_Theory_DE.tex  BLOOMING_DIRECTED_GRAPH.md  BLOOMING_DIRECTED_GRAPH_AGENTS.md  Binary_1_0_Zed_Theory.tex  IEEE754_Geometric_Measurements_EN.md  IEEE754_Geometric_Measurements_EN.tex  IEEE754_Geometric_Measurements_FR.md  IEEE754_Geometric_Measurements_FR.tex  NAMESPACES_LANGGRAPH_LANGFLOW_LANGCHAIN_SCOTTWEEDENLANG.md  PROJECT_PLAN.md  _config.dev.yml  _config.yml  gated-loopback-flower.md  vocabulary_greek.tex
docs/_data/: authors.yml
docs/latex/: README.md  main.aux  (+3 more)
schemas/: gated-loopback-flower.avsc  gated-loopback-flower.proto  gated-loopback-flower.schema.json
src/: stack.c  stack_crossplatform.c  test_geometry.c  test_geometry.cpp
test/: _config.yml
tools/: dir-trie.sh
tot/: CS5383_Project_Machine-1.txt  CS5383_Project_Machine.txt  CS5383_Project_introduction.md  CS5383_task4.tex  CS5383_task5.tex  CS5383_task6.html  CS5383_task6.tex
(+94 files in other folders)
